app/assets/stylesheets/components/page_specific/_category_detail.scss
.category-detail {
  border-bottom: $default-border-thin;
  margin-bottom: $baseline-unit*6;
  padding-bottom: $baseline-unit*8;
  position: relative;

  &:last-child {
    @include respond-to(0, $mq-m) {
      margin-bottom: 0;
    }
  }
}

.category-detail__list {
  list-style: none;
  padding: 0;
  margin-top: $baseline-unit*4;
  margin-bottom: 0;
}

.editorial .category-detail__list--extended.collapsible-section {
  padding: 0;
  border: 0;
}

.category-detail__view-more {
  padding-left: $baseline-unit*7;

  .category-detail__view-more__label-more,
  .category-detail__view-more__label-less,
  .svg-icon {
    display: none;
  }

  .unstyled-button {
    @include body(18, 24);
    display: inline-block;
    background: $color-grey-very-light;
    color: $color-link-default;
    position: absolute;
    bottom: 0;
    right: 0;
    user-select: none;
    padding: 8px 18px;
    padding-left: $baseline-unit*7;

    .category-detail__view-more__label-more {
      display: inline;
    }

    .category-detail__view-more__label-less {
      display: none;
    }

    .svg-icon {
      position: absolute;
      display: block;
      top: 12px;
      left: 12px;
    }

    .collapsable__trigger-icon {
      display: none;
    }

    &.is-active {
      .category-detail__view-more__label-more {
        display: none;
      }

      .category-detail__view-more__label-less {
        display: inline;
      }

      .svg-icon--plus {
        display: none;
      }
    }

    &:hover {
      text-decoration: underline;
    }
  }
}

.category-detail__list-item {
  margin-bottom: $baseline-unit*3;

  @include respond-to($mq-m) {
    margin-bottom: $baseline-unit*2;
  }

  &.is-off {
    display: none;
  }
}

.category-detail__view-all {
  display: none;

  .js & {
    @include body(18, 24);
    color: $color-link-default;
    display: inline;
  }

  &:hover,
  &:focus {
    outline: none;
    text-decoration: underline;
  }

  &.is-on{
    display: none;
  }
}

.category-detail__list-container {
  .js & {
    display: none;
  }

  &.is-active {
    display: block;
  }
}

.category-detail__heading {
  .svg-icon {
    display: none;
  }

  .js & {
    position: relative;
    padding-left: $category-inset;
    user-select: none;

    button {
      margin-left: -$category-inset;
      padding-left: $category-inset;
      text-align: left;

      &:focus,
      &:hover {
        outline: none;
        border-bottom: 2px solid $color-green-dark;
        margin-bottom: -2px;

        svg {
          fill: $color-green-dark;
        }
      }
    }

    .collapsable__trigger-icon {
      display: none;
    }

    .svg-icon {
      position: absolute;
      top: 8px;
      left: 0;
      display: block;
    }

    .is-active .svg-icon--plus {
      display: none;
    }
  }
}

.js .category-detail__intro {
  display: none;

  @include respond-to($mq-s) {
    padding-left: $category-inset;
    display: block;
  }
}

.js .category-detail__list-container {
  padding-left: $category-inset;
}

